force-app/main/default/objects/LRC_Tile_State__c/LRC_Tile_State__c.object-meta.xml
<CustomObject>
    <description>This object stores the user preference of view of tile states for multiple apps or objects</description>
    <label>LRC Tile State</label>
    <nameField>
        <label>LRC Tile State Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LRC Tile State</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>