force-app/main/default/objects/LRC_Tile_State__c/fields/Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Unique_Id__c</fullName>
    <description>This field is  used to create unique key for records to have unique records only</description>
    <externalId>true</externalId>
    <label>Unique Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>