force-app/main/default/objects/LRC_Tile_State__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field stores the lookup to User for which the view preference record is created.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LRC_Tile_State</relationshipName>
    <type>Lookup</type>
</CustomField>