force-app/main/default/objects/LRC_Tile_State__c/fields/View_Related_To__c.field-meta.xml
<CustomField>
    <fullName>View_Related_To__c</fullName>
    <description>This field stores the App or Object Name  for which the View State Preference is created.</description>
    <label>View Related To</label>
    <length>100</length>
    <type>Text</type>
</CustomField>