force-app/main/default/objects/LRC_Tile_State__c/fields/View_State__c.field-meta.xml
<CustomField>
    <fullName>View_State__c</fullName>
    <description>This field stores the view state of User view preference</description>
    <label>View State</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>